--- a/Cordova Builder.csproj
+++ b/Cordova Builder.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="locale.ja.Designer.cs">
+      <DependentUpon>locale.ja.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="locale.ko.Designer.cs">
       <DependentUpon>locale.ko.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -74,13 +79,19 @@
     <Compile Include="Redirect.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requirements.cs" />
     <Compile Include="TextBoxList.cs" />
     <EmbeddedResource Include="Form1.en.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form1.ja.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="locale.ja.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>locale.ja.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="locale.ko.resx">
       <Generator>ResXFileCodeGenerator</Generator>
