--- a/Cordova Builder.csproj
+++ b/Cordova Builder.csproj
@@ -147,6 +147,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="version.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
