--- a/Cordova Builder.csproj
+++ b/Cordova Builder.csproj
@@ -84,17 +84,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="Cordova.cs" />
-    <Compile Include="DataMan.cs" />
-    <Compile Include="DataManager.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Cordova\Data\Config.cs" />
+    <Compile Include="Cordova\Core\Cordova.cs" />
+    <Compile Include="Cordova\Manage\DataMan.cs" />
+    <Compile Include="Cordova\Manage\DataManager.cs" />
+    <Compile Include="Cordova\Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Cordova\Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="JsonHelper.cs" />
+    <Compile Include="Cordova\Data\JsonHelper.cs" />
     <Compile Include="locale.ja.Designer.cs">
       <DependentUpon>locale.ja.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -115,27 +115,27 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>locale.resx</DependentUpon>
     </Compile>
-    <Compile Include="PackageJson.cs" />
-    <Compile Include="Redirect.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Cordova\Data\PackageJson.cs" />
+    <Compile Include="Cordova\Core\Redirect.cs" />
+    <Compile Include="Cordova\EntryPoint\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingsDialog.cs">
+    <Compile Include="Cordova\Forms\SettingsDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SettingsDialog.Designer.cs">
+    <Compile Include="Cordova\Forms\SettingsDialog.Designer.cs">
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="TextBoxList.cs" />
-    <EmbeddedResource Include="Form1.en.resx">
+    <Compile Include="Cordova\Data\TextBoxList.cs" />
+    <EmbeddedResource Include="Cordova\Forms\Form1.en.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.ja.resx">
+    <EmbeddedResource Include="Cordova\Forms\Form1.ja.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.ko.resx">
+    <EmbeddedResource Include="Cordova\Forms\Form1.ko.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Cordova\Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="locale.ja.resx">
@@ -163,13 +163,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SettingsDialog.ja.resx">
+    <EmbeddedResource Include="Cordova\Forms\SettingsDialog.ja.resx">
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SettingsDialog.ko.resx">
+    <EmbeddedResource Include="Cordova\Forms\SettingsDialog.ko.resx">
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SettingsDialog.resx">
+    <EmbeddedResource Include="Cordova\Forms\SettingsDialog.resx">
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="builder.nsi" />
