--- a/Cordova Builder.csproj
+++ b/Cordova Builder.csproj
@@ -185,6 +185,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="README.md" />
     <None Include="version.json" />
   </ItemGroup>
   <ItemGroup>
