removed matrix properties

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,18 +6,7 @@ on:
 
 jobs:
   build:
-     strategy:
-      matrix:
-        python-version: ['2.x', '3.x']
-        os: [windows-2019]
-        log: [yes, no]
-        include:
-          - nightly: nightly
-            os: windows-2019
-            log: no
-            python-version: 3.x
-    
-    runs-on: ${{ matrix.os }} 
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -36,12 +25,10 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
-        if: startsWith(matrix.os, 'windows')
+          python-version: 2.x
       - name: 압축 라이브러리 설치
         run: |
           choco install zip
-        if: startsWith(matrix.os, 'windows')        
       - name: NSIS 프로세스 종료 플러그인 압축 해제
         run: |
           unzip "${{ github.workspace }}/NsProcess.zip" -d "${{ github.workspace }}/NSIS_Plugins"
