--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,7 @@ jobs:
       - name: NSIS 프로세스 종료 플러그인 압축 해제
         shell: powershell
         run: |
+          mkdir ./NSIS_Plugins/Plugins
           Expand-Archive -Path NsProcess.zip -DestinationPath ./NSIS_Plugins/
       - name: 설치 파일 빌드
         uses: joncloud/makensis-action@v3.6
