--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
         uses: joncloud/makensis-action@v3.6
         with:
           script-file: ./builder.nsi
-          additional-plugin-paths: ./NSIS_Plugins/Plugins
+          additional-plugin-paths: ./NSIS_Plugins
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
