refactor: 리소스 관리 시스템 리팩토링 및 어댑터 패턴 도입
`Cordova Builder.csproj` 파일에 새로운 리소스 관리 관련 파일들이 추가되었습니다: `ResourceManagerAdapter.cs`, `ResourceManagerFactory.cs`, `ResourceToken.cs`, `ResourceTokens.cs`.

`Cordova.cs` 파일에서 `ResourceManager` 대신 `ResourceManagerAdapter`를 사용하도록 변경되었습니다. 이를 위해 `ResourceManagerFactory.Create()` 메서드를 사용하여 `ResourceManagerAdapter` 인스턴스를 생성합니다.

여러 메서드에서 문자열 리소스를 가져오는 방식이 변경되었습니다. 기존에는 문자열 키를 직접 사용했으나, 이제는 `ResourceTokens` 클래스의 정적 필드를 사용하여 문자열 리소스를 가져옵니다.

새로운 파일들의 역할:
- `ResourceManagerAdapter.cs`: `ResourceManager`를 래핑하여 리소스 문자열을 가져오는 어댑터 클래스
- `ResourceManagerFactory.cs`: `ResourceManagerAdapter` 인스턴스를 생성하는 팩토리 클래스
- `ResourceToken.cs`: 리소스 문자열의 키를 나타내는 클래스
- `ResourceTokens.cs`: 여러 리소스 문자열 키를 정적 필드로 정의한 클래스

--- a/Cordova Builder.csproj
+++ b/Cordova Builder.csproj
@@ -82,6 +82,10 @@
     <Compile Include="Cordova\Common\Http\AppDownloadClient.cs" />
     <Compile Include="Cordova\Common\IO\FileManager.cs" />
     <Compile Include="Cordova\Common\Json\JsonHelper.cs" />
+    <Compile Include="Cordova\Common\Localization\ResourceManagerAdapter.cs" />
+    <Compile Include="Cordova\Common\Localization\ResourceManagerFactory.cs" />
+    <Compile Include="Cordova\Common\Localization\ResourceToken.cs" />
+    <Compile Include="Cordova\Common\Localization\ResourceTokens.cs" />
     <Compile Include="Cordova\Models\AndroidBuildConfig.cs" />
     <Compile Include="Cordova\Models\BuildConfig.cs" />
     <Compile Include="Cordova\Models\Config.cs" />
