--- a/Cordova Builder.csproj
+++ b/Cordova Builder.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Cordova\Common\Localization\ResourceToken.cs" />
     <Compile Include="Cordova\Common\Localization\ResourceTokens.cs" />
     <Compile Include="Cordova\Common\Version\VersionManager.cs" />
+    <Compile Include="Cordova\Core\BaseBuilder.cs" />
     <Compile Include="Cordova\Models\AndroidBuildConfig.cs" />
     <Compile Include="Cordova\Models\BuildConfig.cs" />
     <Compile Include="Cordova\Models\Config.cs" />
