--- a/Cordova Builder.csproj
+++ b/Cordova Builder.csproj
@@ -181,6 +181,7 @@
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="builder.nsi" />
+    <None Include="dotnet.yml" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
