--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,12 +17,9 @@ jobs:
       - name: 빌드
         run: msbuild "Cordova Builder.csproj" -t:rebuild -verbosity:diag -property:Configuration=Release
       - name: Install NSIS
-        shell: powershell
-        run: |
-          choco install nsis -y --no-progress
-          echo "C:\Program Files (x86)\NSIS\Bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-          where.exe makensis
-          makensis /VERSION        
+        uses: repolevedavaj/install-nsis@v1.0.1
+        with:
+          nsis-version: '3.10'      
       - name: WGET
         shell: powershell
         run: |
