--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,18 +20,6 @@ jobs:
         uses: repolevedavaj/install-nsis@v1.0.1
         with:
           nsis-version: "3.10"
-      - name: Add makensis to PATH
-        shell: pwsh
-        run: |
-          $nsisBin = "${env:ProgramFiles(x86)}\NSIS\Bin"
-          if (Test-Path "$nsisBin\makensis.exe") {
-            echo "$nsisBin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-            Write-Host "makensis added to PATH: $nsisBin"
-            where.exe makensis
-            makensis /VERSION
-          } else {
-            throw "makensis.exe not found in $nsisBin"
-          }
       - name: WGET
         shell: powershell
         run: |
@@ -45,8 +33,9 @@ jobs:
           mkdir ./NSIS_Plugins/Plugins
           Expand-Archive -Path NsProcess.zip -DestinationPath ./NSIS_Plugins/
       - name: 설치 파일 빌드
-        uses: joncloud/makensis-action@v3.6
+        uses: joncloud/makensis-action@v5.0
         with:
+          arguments: "/V3"
           script-file: ./builder.nsi
           additional-plugin-paths: ./NSIS_Plugins
       - name: Upload Artifacts
